fix: double scrollbar

--- a/apps/gauzy/src/app/pages/equipment/equipment.component.scss
+++ b/apps/gauzy/src/app/pages/equipment/equipment.component.scss
@@ -8,10 +8,6 @@
 }
 
 :host {
-	@include card-overrides(unset,
-		$default-card-height,
-		$default-radius );
-
 	nb-card {
 		background-color: nb-theme(gauzy-card-2);
 	}
@@ -20,10 +16,13 @@
 		display: flex;
 		flex-direction: column;
 		background-color: nb-theme(gauzy-card-2);
+		overflow: unset;
+		height: calc(100vh - 27rem);
+		border-radius: 0 0 nb-theme(border-radius) nb-theme(border-radius);
 
 		.table-scroll-container {
 			flex-grow: 10;
-			max-height: calc(100vh - 25.5rem);
+			max-height: unset;
 		}
 
 		.pagination-container {
